# sdf-cad

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  scene.scad
benches/: sdf.rs
src/: debug_image.rs  lib.rs  main.rs  math.rs  scad.rs
src/mesh/: adaptive.rs  bcc.rs  builder.rs  cache.rs  decimation.rs  marching.rs  mod.rs  octree.rs  tetrahedra.rs
src/mesh/tests/: adaptive_test.rs  bcc_test.rs  fuzz_csg_test.rs  fuzz_marching_test.rs  octree_test.rs  tetrahedra_test.rs
src/scad_parser/: ast.rs  mod.rs  parser.rs  tokenizer.rs
src/solid/: csg.rs  mod.rs  primitives.rs  simd.rs  transforms.rs
src/viewer/: axis_gizmo.rs  camera_control.rs  mod.rs
